# deepTutor

./: .gitignore  CLAUDE.md  README.md  SPEC.md  debug_pdf.py  index.html  review_page.html  run.sh
backend/: Dockerfile  fly.toml  pyproject.toml  worker.py  wrangler.toml
backend/app/: config.py  main.py
backend/app/api/: auth.py
backend/app/crawlers/: __init__.py  base.py  converter.py  education_quizzes.py  education_quizzes_playwright.py  eleven_plus_exams.py  examberry.py  models.py  nvr_shapes.py  orchestrator.py  pdf_extractor.py  sats_papers.py  validator.py  vector_extractor.py
backend/app/db/: __init__.py  database.py  models.py
backend/scripts/: analyze_questions.py  build_verified_dump.py  cleanup_questions.py  content_generator.py  convert_mermaid_to_flowchart.py  crawl_all.py  crawl_questions.py  debug_main.py  delete_corrupted.py  download_materials.py  extract_all_nvr.py  extract_cgp_english.py  extract_cgp_english_v2.py  extract_gl_english.py  extract_gl_english_v2.py  extract_gl_nvr.py  extract_gl_vr.py  extract_gl_vr_v2.py  extract_granular_nvr.py  extract_maths.py  extract_nvr_answers.py  extract_nvr_from_pdf.py  extract_q1_simple.py  extract_sample_pdfs.py  fix_all_questions.py  fix_english_vr_answers.py  fix_maths_answers.py  fix_nvr_options.py  generate_all_nvr.py  generate_lessons.py  generate_matrix_nvr.py  generate_nvr_questions.py  generate_nvr_svgs.py  generate_questions.py  generate_raven_nvr.py  generate_verified_questions.py  import_crawled.py  import_datasets.py  import_questions.py  import_raven_nvr.py  (+15 more)
data/: cgp_scraped.json  (+2 more)
(+112 files in other folders)
